refactor: remove unused user params and functions
