# modules/user/user_controller/user_controller.go
@@ -74,14 +74,14 @@ func (uc UserController) Login(c *fiber.Ctx) error {
 // @Tags Users
 // @Accept  json
 // @Produce json
-// @Param   body             body user_models.CreateUser true "Request Body"
+// @Param   body             body user_models.User true "Request Body"
 // @Success 201 {object}     user_models.User "Created user"
 // @Failure 400 {object}     fiber.Map "Invalid request format or validation error"
 // @Failure 500 {object}     fiber.Map "Failed to hash password or create user"
 // @Failure default {object} controller_common.SingleErrorMessage "An unexpected error response."
 // @Router  /register [post]
 func (uc UserController) CreateUser(c *fiber.Ctx) error {
-	user := &user_models.CreateUser{}
+	user := &user_models.User{}
 
 	if err := c.BodyParser(user); err != nil {
 		return c.Status(400).JSON(fiber.Map{"error": "Invalid request format"})
@@ -132,34 +132,4 @@ func (uc UserController) GetUser(c *fiber.Ctx) error {
 	}
 
 	return c.JSON(foundUser)
-}
-
-// ListUsers godoc
-//
-// @Summary List users
-// @Tags Users
-// @Accept  json
-// @Produce json
-// @Param   discount_percentage query int false "Filter users by discount percentage"
-// @Param   page query int false "Page number for pagination" default(1)
-// @Param   limit query int false "Limit of results per page" default(10)
-// @Success 200 {object}     utils.Pagination "Paginated list of users"
-// @Failure 500 {object}     fiber.Map "Failed to fetch users"
-// @Failure default {object} controller_common.SingleErrorMessage "An unexpected error response."
-// @Router  /users [get]
-// @Security BearerAuth
-func (uc UserController) ListUsers(c *fiber.Ctx) error {
-	var userFilter user_models.User
-	discountPercentage, _ := strconv.Atoi(c.Query("discount_percentage", "0"))
-	userFilter.DiscountPercentage = int32(discountPercentage)
-
-	page, _ := strconv.Atoi(c.Query("page", "1"))
-	limit, _ := strconv.Atoi(c.Query("limit", "10"))
-
-	pagination, err := uc.userRepository.ListUsers(&userFilter, int32(page), int32(limit))
-	if err != nil {
-		return c.Status(500).JSON(fiber.Map{"error": "Failed to fetch users"})
-	}
-
-	return c.JSON(pagination)
 }
