# modules/user/user_models/user_model.go
@@ -9,18 +9,6 @@ import (
 	"gorm.io/gorm"
 )
 
-type CreateUser struct {
-	gorm.Model         `diff:"-" swaggerignore:"true"`
-	FirstName          string `json:"firstName" validate:"required,min=3,max=64"`
-	LastName           string `json:"lastName" validate:"required,min=3,max=64"`
-	Email              string `json:"email" validate:"required,min=6,max=64"`
-	Phone              string `json:"phone" validate:"required,min=6,max=64"`
-	Password           string `json:"password" validate:"required,min=6"`
-	Address            string `json:"address" validate:"required,min=6"`
-	DiscountPercentage int32  `json:"discountPercentage"`
-	IsAdmin            bool   `json:"isAdmin"`
-}
-
 type Login struct {
 	Email    string `json:"email" validate:"required,min=6,max=64"`
 	Password string `json:"password" validate:"required,min=6"`
@@ -30,25 +18,12 @@ type LoginResponse struct {
 	Token string `json:"token"`
 }
 type User struct {
-	gorm.Model         `diff:"-" swaggerignore:"true"`
-	FirstName          string `json:"firstName" validate:"required,min=3,max=64"`
-	LastName           string `json:"lastName" validate:"required,min=3,max=64"`
-	Email              string `json:"email" validate:"required,min=6,max=64"`
-	Phone              string `json:"phone" validate:"required,min=6,max=64"`
-	Password           string `json:"password" validate:"required,min=6,max=64"`
-	Address            string `json:"address" validate:"required,min=6,max=64"`
-	DiscountPercentage int32  `json:"discountPercentage"`
-	IsAdmin            bool   `json:"isAdmin"`
+	gorm.Model `diff:"-" swaggerignore:"true"`
+	Email      string `json:"email" validate:"required,min=6,max=64"`
+	Password   string `json:"password" validate:"required,min=6,max=64"`
 }
 
-func (u *CreateUser) ValidateUser() error {
-	if u.FirstName == "" {
-		return errors.New("first_name cannot be empty")
-	}
-
-	if u.LastName == "" {
-		return errors.New("last_name cannot be empty")
-	}
+func (u *User) ValidateUser() error {
 
 	if u.Email == "" {
 		return errors.New("email cannot be empty")
@@ -58,16 +33,8 @@ func (u *CreateUser) ValidateUser() error {
 		return errors.New("email is not valid")
 	}
 
-	if u.Phone == "" {
-		return errors.New("phone cannot be empty")
-	}
-
 	if u.Password == "" {
 		return errors.New("password cannot be empty")
-	}
-
-	if u.DiscountPercentage < 0 {
-		return errors.New("discount_percentage cannot be lower than 0")
 	}
 
 	return nil
@@ -80,7 +47,7 @@ func isValidEmail(email string) bool {
 	return matched
 }
 
-const jwtSecret = "your_jwt_secret" // Altere isso para sua chave secreta JWT
+const jwtSecret = "your_jwt_secret"
 
 func (u *User) GenerateJWT() (string, error) {
 	token := jwt.New(jwt.SigningMethodHS256)
@@ -88,7 +55,6 @@ func (u *User) GenerateJWT() (string, error) {
 	claims := token.Claims.(jwt.MapClaims)
 	claims["id"] = u.ID
 	claims["email"] = u.Email
-	claims["is_admin"] = u.IsAdmin
 	claims["exp"] = time.Now().Add(time.Hour * 72).Unix()
 
 	tokenString, err := token.SignedString([]byte(jwtSecret))
